k8s/mesh/users-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 8089
